[gd_scene load_steps=11 format=3 uid="uid://1yf7225ss5sc"]

[ext_resource type="Script" uid="uid://cqy6i086ckfmw" path="res://scripts/car_scene.gd" id="1_3e1iw"]
[ext_resource type="Texture2D" uid="uid://74v5v8lht46v" path="res://carBodies/car1.png" id="2_6r7u8"]
[ext_resource type="Texture2D" uid="uid://8jkairaymfmk" path="res://carBodies/car2.png" id="3_fv6di"]
[ext_resource type="Texture2D" uid="uid://wlm1ugt76vgs" path="res://carBodies/wheel.png" id="4_8q48v"]
[ext_resource type="Texture2D" uid="uid://baicevj5ev7w4" path="res://carBodies/car3.png" id="4_vfp5m"]
[ext_resource type="LabelSettings" uid="uid://cu2kxdh38wd7e" path="res://scenes/label_settings.tres" id="5_6r7u8"]
[ext_resource type="FontFile" uid="uid://dsdsw7axr2tds" path="res://fonts/Kenney Mini Square.ttf" id="6_fv6di"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ssh2"]
size = Vector2(536, 141)

[sub_resource type="CircleShape2D" id="CircleShape2D_o37pe"]
radius = 8.0

[sub_resource type="LabelSettings" id="LabelSettings_8q48v"]
font = ExtResource("6_fv6di")
font_size = 24
outline_color = Color(0.556953, 0.556953, 0.556953, 1)

[node name="Car_scene_without_camera" type="RigidBody2D"]
collision_layer = 2
script = ExtResource("1_3e1iw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["car_show"]]
position = Vector2(22, -19.5)
shape = SubResource("RectangleShape2D_5ssh2")

[node name="body" type="Node2D" parent="."]
scale = Vector2(5, 5)

[node name="body1" type="Sprite2D" parent="body"]
texture = ExtResource("2_6r7u8")

[node name="body2" type="Sprite2D" parent="body"]
texture = ExtResource("3_fv6di")

[node name="body3" type="Sprite2D" parent="body"]
texture = ExtResource("4_vfp5m")

[node name="suspension" type="Node2D" parent="."]
scale = Vector2(5, 5)

[node name="back_suspension" type="DampedSpringJoint2D" parent="suspension"]
position = Vector2(-26, 1)
node_a = NodePath("../..")
node_b = NodePath("../../back_wheel")
disable_collision = false
length = 5.0
rest_length = 5.0

[node name="front_suspension" type="DampedSpringJoint2D" parent="suspension"]
position = Vector2(35, 1)
node_a = NodePath("../..")
node_b = NodePath("../../front_wheel")
disable_collision = false
length = 5.0
rest_length = 5.0

[node name="back_wheel" type="AnimatableBody2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(5, 5)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="back_wheel"]
position = Vector2(36, 11.400001)
shape = SubResource("CircleShape2D_o37pe")

[node name="back_wheel" type="Sprite2D" parent="back_wheel"]
position = Vector2(34, 0.4000001)
texture = ExtResource("4_8q48v")

[node name="front_wheel" type="AnimatableBody2D" parent="."]
position = Vector2(-5.9604645e-08, -13)
scale = Vector2(5, 5)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="front_wheel"]
position = Vector2(-25, 14)
shape = SubResource("CircleShape2D_o37pe")

[node name="front_wheel" type="Sprite2D" parent="front_wheel"]
position = Vector2(-27, 3)
texture = ExtResource("4_8q48v")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="lblRPM" type="Label" parent="CanvasLayer"]
offset_left = 23.0
offset_top = 869.0
offset_right = 171.0
offset_bottom = 913.0
text = "RPM: "
label_settings = ExtResource("5_6r7u8")

[node name="lblSpeed" type="Label" parent="CanvasLayer"]
offset_left = 324.0
offset_top = 869.0
offset_right = 472.0
offset_bottom = 913.0
text = "Speed: "
label_settings = ExtResource("5_6r7u8")

[node name="lblthrottle" type="Label" parent="CanvasLayer"]
offset_left = 622.0
offset_top = 869.0
offset_right = 770.0
offset_bottom = 913.0
text = "throttle: "
label_settings = ExtResource("5_6r7u8")

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 508.0
offset_top = 816.0
offset_right = 659.0
offset_bottom = 856.0
tint_over = Color(0.6957634, 0.022983853, 9.62615e-08, 1)
tint_progress = Color(0, 0.53298724, 0.15945026, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 772.0
offset_top = 242.0
offset_right = 1129.0
offset_bottom = 326.0
text = "Race finished!"
label_settings = SubResource("LabelSettings_8q48v")
